fix scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,27 @@
 #root {
   width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(91, 91, 91);
+  border-radius: 10px;
+  border: 3px solid rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(79, 79, 79);
+}
+
 @font-face {
   font-family: 'Pinksoda';
   src: url('/src/assets/fonts/Pinksoda.woff2') format('woff2');
@@ -79,11 +100,6 @@ html {
   scroll-snap-align: end;
   background-color: rgb(10, 10, 10);
 }
-
-/* .particles-container {
-  filter: blur(5px);
-  pointer-events: none;
-} */
 
 .main-section {
   @apply box xs:text-sm xs1:text-base;
